Use Java nio instead of commons-io lib